--- a/platform/ocm/ocm_controller.yaml
+++ b/platform/ocm/ocm_controller.yaml
@@ -1944,7 +1944,7 @@ spec:
             drop:
             - ALL
       initContainers:
-      - image: ghcr.io/open-component-model/ocm-registry:v0.5.0
+      - image: ghcr.io/open-component-model/ocm-registry:v0.0.1-dev
         imagePullPolicy: IfNotPresent
         name: init-registry
       securityContext:
