--- a/templates/podify.yaml
+++ b/templates/podify.yaml
@@ -49,8 +49,8 @@ steps:
               - name: {{ . }}
             {{ end }}
       snapshotTemplate:
-        name: {{ .Parameters.Name }}-localized
-        tag: latest
+         name: {{ .Parameters.Name }}-localized
+         - tag: latest
 - name: config
   template:
     apiVersion: delivery.ocm.software/v1alpha1
