added verification spec in cv.yaml

--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -14,4 +14,9 @@ spec:
       name: creds
   references:
     expand: true
+  verify:
+  - name: key
+    publicKey:
+      secretRef:
+        name: publickey  
 
