--- a/templates/podify.yaml
+++ b/templates/podify.yaml
@@ -92,5 +92,5 @@ steps:
       targetNamespace: default
       sourceRef:
         kind: OCIRepository
-        name: {{ .Parameters.Name }}-configured
+        name: {{ .Parameters.Name }}
       path: ./
