--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -1,7 +1,7 @@
 apiVersion: delivery.ocm.software/v1alpha1
 kind: ComponentVersion
 metadata:
-  name: podifyNew
+  name: podifynew
   namespace: ocm-system
 spec:
   interval: 10m0s
