--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -9,9 +9,9 @@ spec:
   version:
     semver: "=>v1.0.2"
   repository:
-    url: github.com/sidhishruti22/ 
+    url: https://int.repositories.cloud.sap/artifactory/dcom-test/component-descriptors/github.com/sidhishruti22/
     secretRef:
-      name: creds
+      name: acreds
   references:
     expand: true
   
