--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -9,7 +9,7 @@ spec:
   version:
     semver: "=>v1.0.1"
   repository:
-    url: https://int.repositories.cloud.sap/artifactory/dcom-test/component-descriptors/github.com/sidhishruti22/
+    url: dcom-demo.int.repositories.cloud.sap
     secretRef:
       name: acreds
   references:
