--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -9,7 +9,7 @@ spec:
   version:
     semver: v1.0.2
   repository:
-    url: dcom-demo.int.repositories.cloud.sap
+    url: https://int.repositories.cloud.sap/artifactory/dcom-demo/component-descriptors/github.com/sidhishruti22/
     secretRef:
       name: acreds
   references:
