--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -7,9 +7,9 @@ spec:
   interval: 10m0s
   component: github.com/sidhishruti22/podify
   version:
-    semver: v1.0.2
+    semver: =v1.0.2
   repository:
-    url: https://int.repositories.cloud.sap/artifactory/dcom-test/component-descriptors/github.com/sidhishruti22/
+    url: dcom-demo.int.repositories.cloud.sap
     secretRef:
       name: acreds
   references:
