--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -9,7 +9,7 @@ spec:
   version:
     semver: =v1.0.2
   repository:
-    url: dcom-demo.int.repositories.cloud.sap
+    url: dcom-test.int.repositories.cloud.sap
     secretRef:
       name: acreds
   references:
