--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -9,9 +9,9 @@ spec:
   version:
     semver: v1.0.2
   repository:
-    url: dcom-test.int.repositories.cloud.sap
+    url: ghcr.io/sidhishruti22
     secretRef:
-      name: acreds
+      name: creds
   references:
     expand: true
   
