--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -7,11 +7,11 @@ spec:
   interval: 10m0s
   component: github.com/sidhishruti22/podify
   version:
-    semver: "=>v1.0.2"
+    semver: =v1.0.2
   repository:
-    url: ghcr.io/sidhishruti22
+    url: dcom-demo.int.repositories.cloud.sap
     secretRef:
-      name: creds
+      name: acreds
   references:
     expand: true
   
