--- a/components/backend/manifests/deploy.yaml
+++ b/components/backend/manifests/deploy.yaml
@@ -26,6 +26,8 @@ spec:
       - name: backend
         image: ghcr.io/stefanprodan/podinfo:6.3.3
         imagePullPolicy: IfNotPresent
+        imagePullSecrets:
+           - name: aregcred
         ports:
         - name: http
           containerPort: 9898
