--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 10m0s
   component: github.com/sidhishruti22/podify
   version:
-    semver: "=>v1.0.1"
+    semver: v1.0.1
   repository:
     url: dcom-demo.int.repositories.cloud.sap
     secretRef:
