--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -7,9 +7,9 @@ spec:
   interval: 10m0s
   component: github.com/sidhishruti22/podify
   version:
-    semver: v1.0.3
+    semver: v1.0.2
   repository:
-    url: dcom-demo.int.repositories.cloud.sap
+    url: ghcr.io/sidhishruti22
     secretRef:
       name: acreds
   references:
