--- a/apps/podify/componentversion.yaml
+++ b/apps/podify/componentversion.yaml
@@ -11,7 +11,7 @@ spec:
   repository:
     url: ghcr.io/sidhishruti22
     secretRef:
-      name: acreds
+      name: creds
   references:
     expand: true
   
